[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'


[project]
name = "fitspy"
dynamic = ["version"]
authors = [{ name = "Patrick Quéméré", email = "patrick.quemere@cea.fr" }]
description = "Fitspy: a generic tool to fit spectra in python"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["Fitspy", "fit", "spectra", "spectrum", "map", "1D", "2D",
    "decomposition", "Gaussian", "Lorentzian", "Pseudovoigt", "GUI"]
license = { text = "GPL v3" }
classifiers = [
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Environment :: Console',
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "lmfit",
    "parse",
    "dill",
    "rosettasciio",
    "pywin32; platform_system == 'Windows'",
]

[project.scripts]
fitspy = "fitspy.app.gui:fitspy_launcher"

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = { attr = "fitspy.VERSION" }

[tool.setuptools.packages.find]
where = ["."]
include = ["fitspy*"]
namespaces = false

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.dev/CEA-MetroCarac/fitspy"
Documentation = "https://cea-metrocarac.github.io/fitspy/doc/index.html"

